main/openldap: run autoreconf for ldapc++
The resulting library is not linked against libsasl2 when autoreconf
is not used...

--- a/main/openldap/APKBUILD
+++ b/main/openldap/APKBUILD
@@ -13,7 +13,7 @@
 #
 pkgname=openldap
 pkgver=2.4.48
-pkgrel=3
+pkgrel=4
 pkgdesc="LDAP Server"
 url="http://www.openldap.org/"
 arch="all"
@@ -128,6 +128,7 @@ build() {
 
 	# Build C++ library.
 	cd contrib/ldapc++
+	autoreconf -fi
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
