--- a/community/py3-setuptools_scm/APKBUILD
+++ b/community/py3-setuptools_scm/APKBUILD
@@ -2,15 +2,15 @@
 # Maintainer: Dmitry Romanenko <dmitry@romanenko.in>
 pkgname=py3-setuptools_scm
 _pkgname=setuptools_scm
-pkgver=3.3.3
-pkgrel=2
+pkgver=3.4.3
+pkgrel=0
 pkgdesc="the blessed package to manage your versions by scm tags"
 url="https://github.com/pypa/setuptools_scm"
 arch="noarch"
 license="MIT"
 depends="python3"
 makedepends="py3-setuptools"
-checkdepends="py3-pytest py3-pip git mercurial"
+checkdepends="py3-pytest py3-pip git mercurial py3-toml"
 source="https://files.pythonhosted.org/packages/source/${_pkgname:0:1}/$_pkgname/$_pkgname-$pkgver.tar.gz"
 builddir="$srcdir"/$_pkgname-$pkgver
 
@@ -29,4 +29,4 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="196d4785a1802875d89b9e54ae788e791a9c5cb685109784059955b691242984e42b96d77075116790935f56be82259bc2588d95d65ecbb101261d76daddb83c  setuptools_scm-3.3.3.tar.gz"
+sha512sums="455344ac7dda5c0ac79bdb26bef020cafc116fe59b979601351c78d26806e6e610774979f74762c113926e8b022e7b58513f25010ef7b92e5104fc1b2d552d4e  setuptools_scm-3.4.3.tar.gz"
