testing/php7-pecl-uploadprogres: rename from php7-uploadprogress
- downgrade because of official release
- using github as promary source with tests

--- a/testing/php7-pecl-uploadprogress/APKBUILD
+++ b/testing/php7-pecl-uploadprogress/APKBUILD
@@ -1,23 +1,23 @@
 # Contributor: Andy Postnikov <apostnikov@gmail.com>
 # Maintainer: Andy Postnikov <apostnikov@gmail.com>
 
-pkgname=php7-uploadprogress
+pkgname=php7-pecl-uploadprogress
 _pkgreal=uploadprogress
-pkgver=2.0.0
-pkgrel=1
+pkgver=1.1.2
+pkgrel=0
 pkgdesc="An extension to track progress of a file upload for PHP"
-url="https://github.com/php/pecl-php-uploadprogress"
+url="https://pecl.php.net/package/uploadprogress"
 arch="all"
 license="PHP-3.01"
 depends="php7-common"
-makedepends="php7-dev autoconf"
+makedepends="php7-dev re2c"
 subpackages="$pkgname-doc::noarch"
-source="$pkgname-$pkgver.tar.gz::https://github.com/skilld-labs/pecl-php-uploadprogress/archive/$_pkgreal-$pkgver.tar.gz"
-builddir="$srcdir/pecl-php-uploadprogress-$_pkgreal-$pkgver"
+source="$pkgname-$pkgver.tar.gz::https://github.com/php/pecl-php-uploadprogress/archive/uploadprogress-$pkgver.tar.gz"
+builddir="$srcdir/pecl-php-uploadprogress-uploadprogress-$pkgver"
+provides="php7-uploadprogress=$pkgver-r$pkgrel" # for backward compatibility
+replaces="php7-uploadprogress" # for backward compatibility
 
 build() {
-	cd "$builddir"
-	echo $builddir
 	phpize7
 	./configure \
 		--prefix=/usr \
@@ -26,14 +26,12 @@ build() {
 }
 
 check() {
-	cd "$builddir"
-	make NO_INTERACTION=1 REPORT_EXIT_STATUS=1 test
 	php7 -d extension="$builddir"/modules/$_pkgreal.so --ri $_pkgreal
+	make NO_INTERACTION=1 REPORT_EXIT_STATUS=1 test
 }
 
 package() {
 	local confdir="$pkgdir/etc/php7/conf.d"
-	cd "$builddir"
 
 	make INSTALL_ROOT="$pkgdir" install
 
@@ -45,4 +43,4 @@ package() {
 		"$pkgdir"/usr/share/doc/$pkgname/examples/
 }
 
-sha512sums="5b7596732f564d4ce68c760aacb650c1425896bc4ea57d47e5d14c985a30e0bfe4355b4e8def53303b5011f6dfe324e4e96ee9687397b5f28ac57ec55682ad09  php7-uploadprogress-2.0.0.tar.gz"
+sha512sums="2f613f068a416c9244d57afa340c205c172d1b7d20f061bcb76d946e65318795bd3a1ba8536550e171e7b454cc00430a5965e7b36294487af6c34a5ba95cb287  php7-pecl-uploadprogress-1.1.2.tar.gz"
