testing/bluez-alsa: enable aac
set conficure option and add fdk-aac dependency

--- a/testing/bluez-alsa/APKBUILD
+++ b/testing/bluez-alsa/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Bradley Saulteaux <-@bradso.to>
 pkgname=bluez-alsa
 pkgver=2.0.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Bluetooth Audio ALSA Backend"
 url="https://github.com/Arkq/bluez-alsa"
 arch="all"
@@ -9,7 +9,7 @@ license="MIT"
 depends="bluez"
 subpackages="$pkgname-openrc"
 makedepends="automake autoconf libtool alsa-lib-dev bluez-dev glib-dev sbc-dev
-	dbus-dev"
+	dbus-dev fdk-aac-dev"
 source="$pkgname-$pkgver.tar.gz::https://github.com/Arkq/bluez-alsa/archive/v$pkgver.tar.gz
 	bluealsa.initd"
 
@@ -21,7 +21,7 @@ prepare() {
 
 build() {
 	cd build
-	../configure --enable-ofono --disable-static
+	../configure --enable-aac --enable-ofono --disable-static
 	make
 }
 
