--- a/main/mariadb/APKBUILD
+++ b/main/mariadb/APKBUILD
@@ -4,9 +4,10 @@
 # Contributor: Carlo Landmeter <clandmeter@gmail.com>
 # Contributor: TBK <alpine@jjtc.eu>
 # Contributor: Marcel Haazen <marcel@haazen.xyz>
+# Contributor: Jake Buchholz <tomalok@gmail.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=mariadb
-pkgver=10.4.10
+pkgver=10.4.11
 pkgrel=0
 pkgdesc="A fast SQL database server"
 url="https://www.mariadb.org/"
@@ -329,7 +330,12 @@ mytest() {
 	pkgdesc="The test suite distributed with MariaDB"
 	mkdir -p "$subpkgdir"/usr/bin
 	mv "$pkgdir"/usr/bin/mysql_client_test \
+		"$pkgdir"/usr/bin/mysql_client_test_embedded \
 		"$pkgdir"/usr/bin/my_safe_process \
+		"$pkgdir"/usr/bin/mariadb-client-test \
+		"$pkgdir"/usr/bin/mariadb-client-test-embedded \
+		"$pkgdir"/usr/bin/mariadb-test \
+		"$pkgdir"/usr/bin/mariadb-test-embedded \
 		"$pkgdir"/usr/bin/mysqltest \
 		"$pkgdir"/usr/bin/mysqltest_embedded \
 		"$subpkgdir"/usr/bin/
@@ -432,7 +438,7 @@ _plugin_rocksdb() {
 		"$subpkgdir"/usr/lib/mariadb/plugin/ha_rocksdb.so
 }
 
-sha512sums="4a9b9a37bc3a273de4bd781dac3636256364dae6efbba45765d6b28995da3d64e180422cd10418d1c7acd7fd8843fe2a2638c07e0f56b0c09170c58812cc6b71  mariadb-10.4.10.tar.gz
+sha512sums="2a1a8d90e326530b41a8a7d6889325cefcba5914451a48c6a20d5d5cd68004835e76e6ecac628554167a014f9c0b1487c15f37151afd771ea0166a4c40afd7d2  mariadb-10.4.11.tar.gz
 c352969f6665b0ffa387f7b185a5dea7751f4b16c12c809627857b27321efa09159369d7dd5c852d6159a9f173cb895fb601f0c52a1fa6e3527899520030964c  mariadb.initd
 70da971aa78815495098205bcbd28428430aa83c3f1050fec0231ca86af9d9def2d2108a48ee08d86812c8dc5ad8ab1ef4e17a49b4936ed5187ae0f6a7ef8f63  pcre.cmake.patch
 e9ae4613f1d8c5f0a59b39a3548c46e50674ae78e7457d0e64c49f7e1573125c13634bbce7e29179bb8865a423171f852f43b96f7ef95619a95f02edcfc71efd  ppc-remove-glibc-dep.patch
