--- a/community/systemc/APKBUILD
+++ b/community/systemc/APKBUILD
@@ -2,12 +2,12 @@
 # Maintainer: Sören Tempel <soeren+alpine@soeren-tempel.net>
 pkgname=systemc
 pkgver=2.3.3
-pkgrel=0
+pkgrel=1
 pkgdesc="C++ library for modeling and describing complex hardware systems"
 url="https://www.accellera.org/downloads/standards/systemc"
 arch="x86 x86_64" # upstream only supports x86*
 license="Apache-2.0"
-subpackages="$pkgname-doc $pkgname-dev"
+subpackages="$pkgname-doc $pkgname-static $pkgname-dev"
 source="https://www.accellera.org/images/downloads/standards/$pkgname/$pkgname-$pkgver.tar.gz"
 builddir="$srcdir/$pkgname-$pkgver/objdir"
 
@@ -25,7 +25,7 @@ build() {
 		--mandir=/usr/share/man \
 		--localstatedir=/var \
 		--with-unix-layout=yes \
-		--disable-static
+		--enable-static
 	make
 }
 
