community/wireshark: don't build for armhf

--- a/community/wireshark/APKBUILD
+++ b/community/wireshark/APKBUILD
@@ -7,7 +7,7 @@ pkgver=3.0.8
 pkgrel=0
 pkgdesc="A network protocol analyzer"
 url="https://www.wireshark.org"
-arch="all"
+arch="all !armhf" # blocked by qt5-qtdeclarative
 license="GPL-2.0-or-later"
 makedepends="bash bison c-ares-dev cmake flex glib glib-dev gnutls-dev
 	libcap-dev libgcrypt-dev libnl3-dev libcap libpcap-dev
