--- a/community/openrct2/APKBUILD
+++ b/community/openrct2/APKBUILD
@@ -9,19 +9,20 @@ pkgdesc="Open-source re-implementation of Roller Coaster Tycoon 2"
 arch="all !s390x" # Build fails on s390x
 url="https://openrct2.io"
 license="GPL-3.0-only"
+depends="$pkgname-data"
 makedepends="cmake ninja jansson-dev libzip-dev libpng-dev speexdsp-dev fontconfig-dev curl-dev icu-dev sdl2-dev mesa-dev fts-dev unzip"
 install="$pkgname.post-install"
 source="$pkgname-$pkgver.tar.gz::https://github.com/openrct2/openrct2/archive/v$pkgver.tar.gz
 	$pkgname-$pkgver-title_sequences.zip::https://github.com/OpenRCT2/title-sequences/releases/download/v$_pkgver_title_sequences/title-sequence-v$_pkgver_title_sequences.zip
 	$pkgname-$pkgver-objects.zip::https://github.com/OpenRCT2/objects/releases/download/v$_pkgver_objects/objects.zip"
-subpackages="$pkgname-static $pkgname-doc $pkgname-cli"
+subpackages="$pkgname-static $pkgname-doc $pkgname-cli $pkgname-data::noarch"
 options="!check" # No tests available
 builddir="$srcdir/OpenRCT2-$pkgver"
 
 prepare() {
 	default_prepare
 
-	mkdir "$builddir"/build && cd "$builddir"/build
+	mkdir "$builddir"/build
 	mkdir "$builddir"/title && cd "$builddir"/title && unzip "$srcdir"/$pkgname-$pkgver-title_sequences.zip
 	mkdir "$builddir"/object && cd "$builddir"/object && unzip "$srcdir"/$pkgname-$pkgver-objects.zip
 }
@@ -51,7 +52,19 @@ package() {
 	mv "$builddir"/object/* "$pkgdir"/usr/share/openrct2/object
 }
 
+data() {
+	mkdir -p "$subpkgdir"/usr/share/openrct2
+
+	mv \
+		"$pkgdir"/usr/share/openrct2/object \
+		"$pkgdir"/usr/share/openrct2/g2.dat \
+		"$pkgdir"/usr/share/openrct2/shaders \
+		"$pkgdir"/usr/share/openrct2/language \
+		"$subpkgdir"/usr/share/openrct2
+}
+
 cli() {
+	depends="openrct2-data"
 	install="$subpkgname.post-install"
 	mkdir -p "$subpkgdir"/usr/bin
 	mv "$pkgdir"/usr/bin/openrct2-cli "$subpkgdir"/usr/bin/openrct2-cli
