community/qpdf: upgrade to 9.1.1

--- a/community/qpdf/APKBUILD
+++ b/community/qpdf/APKBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=qpdf
-pkgver=9.1.0
+pkgver=9.1.1
 pkgrel=0
 pkgdesc="Command-line tools and library for transforming PDF files"
 url="http://qpdf.sourceforge.net"
@@ -11,7 +11,7 @@ checkdepends="coreutils perl"
 subpackages="$pkgname-dev
 	$pkgname-doc
 	$pkgname-libs
-	$pkgname-fix-qdf:fix_qdf:noarch
+	$pkgname-fix-qdf:fix_qdf
 	"
 source="https://downloads.sourceforge.net/sourceforge/qpdf/qpdf-$pkgver.tar.gz"
 
@@ -88,10 +88,9 @@ package() {
 }
 
 fix_qdf() {
-	depends="qpdf perl"
 	pkgdesc="Repair PDF files in QDF form after editing"
 	mkdir -p "$subpkgdir"/usr/bin
 	mv "$pkgdir"/usr/bin/fix-qdf "$subpkgdir"/usr/bin/
 }
 
-sha512sums="7561ffc366dbce9df58cc85ff18480b28b0d46de04733ba463139188bee95690f92cf0960a328619f0c9f34ce865598db490fa1c6aaa76ee87d2c034a5f7f57e  qpdf-9.1.0.tar.gz"
+sha512sums="008a11fef663a57ca173631f2053988023babea6c333cfe01db0ef955c8cd36d387ed9f2039f55bd5f9ca94c7a8e400461a09a15c5f89e03bc0817fdd0d3d585  qpdf-9.1.1.tar.gz"
