community/gspell: upgrade to 1.8.3

--- a/community/gspell/APKBUILD
+++ b/community/gspell/APKBUILD
@@ -1,9 +1,10 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gspell
-pkgver=1.8.2
+pkgver=1.8.3
 pkgrel=0
 pkgdesc="Flexible API to add spell checking to a GTK+ application"
+options="!check" # Test fails because of missing machine-id
 url="https://wiki.gnome.org/Projects/gspell"
 arch="all"
 license="LGPL-2.1-or-later"
@@ -39,4 +40,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="220bdec2b8229e848960e5e31bda1209dedac232637d3e6d4931ca2552054fbdf3f576d52f3d5a7ac734e6e626f2fcc7cefd0bff906b29ba9930cef791906c32  gspell-1.8.2.tar.xz"
+sha512sums="4116231fdfb416e70ee34c73e0ecf81f0071e81ad477135e3c1e270534dfe4be20c7f45e316e13d33c79944d282ed3223251122983a0f3199ea57c3431a24c1d  gspell-1.8.3.tar.xz"
