main/nginx: enable mod-http-lua on s390x
luajit was just enabled on s390x, allowing mod-http-lua to be built
thereon as well.  This is used by the Kubernetes 'echoserver' E2E test
image.

--- a/main/nginx/APKBUILD
+++ b/main/nginx/APKBUILD
@@ -21,7 +21,7 @@ pkgname=nginx
 # NOTE: Upgrade only to even-numbered versions (e.g. 1.14.z, 1.16.z)!
 # Odd-numbered versions are mainline (development) versions.
 pkgver=1.16.1
-pkgrel=7
+pkgrel=8
 # Revision of nginx-tests to use for check().
 _tests_hgrev=40e5f2a0a238
 _njs_ver=0.3.5
@@ -37,6 +37,7 @@ makedepends="
 	libxml2-dev
 	libxslt-dev
 	linux-headers
+	luajit-dev
 	openssl-dev
 	paxmark
 	pcre-dev
@@ -76,13 +77,6 @@ builddir="$srcdir/$pkgname-$pkgver"
 _modules_dir="usr/lib/$pkgname/modules"
 _stream_js_depends="$pkgname-mod-stream"
 
-# luajit is not available for s390x.
-_skip_luajit=
-case "$CARCH" in
-	s390x) makedepends="$makedepends lua5.1-dev"; _skip_luajit=true;;
-	*) makedepends="$makedepends luajit-dev";;
-esac
-
 # Built-in dynamic modules
 for _mod in \
 	http-geoip \
@@ -102,19 +96,17 @@ done
 
 # For simplicity we assume that module is hosted on GitHub.
 _add_module() {
-	local name="$1" ver="$2" url="$3" skip="$4"
+	local name="$1" ver="$2" url="$3"
 	local dirname="${url##*/}-${ver#v}"
 
 	# Don't add new flag and source if it's already there, i.e. two or more
 	# modules share the same source (e.g. geoip2 that provides http-geoip2
 	# and stream-geoip2).
 	if ! printf '%s\n' $_extra_flags | grep -qFw "$srcdir/$dirname"; then
-		[ "$skip" ] || _extra_flags="$_extra_flags --add-dynamic-module=$srcdir/$dirname"
-		# We need to include source even if module is skipped for this architecture,
-		# due to the static checksums list.
+		_extra_flags="$_extra_flags --add-dynamic-module=$srcdir/$dirname"
 		source="$source $dirname.tar.gz::$url/archive/$ver.tar.gz"
 	fi
-	[ "$skip" ] || subpackages="$subpackages $pkgname-mod-$name:_module"
+	subpackages="$subpackages $pkgname-mod-$name:_module"
 }
 
 _add_module "devel-kit" "v0.3.0" "https://github.com/simpl/ngx_devel_kit"
@@ -132,11 +124,11 @@ _add_module "http-headers-more" "v0.33" "https://github.com/openresty/headers-mo
 _http_headers_more_so="ngx_http_headers_more_filter_module.so"
 
 # luajit is required for lua-nginx-module since v0.10.14
-_add_module "http-lua" "v0.10.15" "https://github.com/openresty/lua-nginx-module" $_skip_luajit
+_add_module "http-lua" "v0.10.15" "https://github.com/openresty/lua-nginx-module"
 _http_lua_depends="$pkgname-mod-devel-kit"
 _http_lua_provides="$pkgname-lua"  # for backward compatibility
 
-_add_module "http-lua-upstream" "v0.07" "https://github.com/openresty/lua-upstream-nginx-module" $_skip_luajit
+_add_module "http-lua-upstream" "v0.07" "https://github.com/openresty/lua-upstream-nginx-module"
 _http_lua_upstream_depends="$pkgname-mod-http-lua"
 
 _add_module "http-nchan" "v1.2.5" "https://github.com/slact/nchan"
