community/kde-applications: disable on armhf and disable broken tests
Closes !3381

--- a/community/baloo-widgets/APKBUILD
+++ b/community/baloo-widgets/APKBUILD
@@ -4,7 +4,7 @@ pkgname=baloo-widgets
 pkgver=19.12.1
 pkgrel=0
 pkgdesc="Widgets for Baloo"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Baloo"
 license="LGPL-2.0-only AND LGPL-2.1-or-later"
 depends_dev="qt5-qtbase-dev kconfig-dev kio-dev ki18n-dev kfilemetadata-dev baloo-dev"
