--- a/community/libkipi/APKBUILD
+++ b/community/libkipi/APKBUILD
@@ -4,7 +4,7 @@ pkgname=libkipi
 pkgver=19.12.1
 pkgrel=0
 pkgdesc="KDE Image Plugin Interface library"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://www.digikam.org/"
 license="GPL-2.0-or-later AND LGPL-2.0-or-later"
 depends_dev="qt5-qtbase-dev kconfig-dev kxmlgui-dev kservice-dev"
