--- a/community/audiocd-kio/APKBUILD
+++ b/community/audiocd-kio/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=audiocd-kio
 pkgver=19.12.1
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://www.kde.org/applications/multimedia/"
 pkgdesc="Kioslave for accessing audio CDs"
 license="GPL-2.0-or-later AND GFDL-1.2-only"
