--- a/community/keditbookmarks/APKBUILD
+++ b/community/keditbookmarks/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=keditbookmarks
 pkgver=19.12.1
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://www.kde.org/"
 pkgdesc="Bookmark Organizer and Editor"
 license="GPL-2.0-only AND GFDL-1.2-only"
