community/kde-applications: disable on armhf and fix checksums

--- a/community/audiocd-kio/APKBUILD
+++ b/community/audiocd-kio/APKBUILD
@@ -37,3 +37,4 @@ package() {
 	DESTDIR="$pkgdir" make install
 }
 
+sha512sums="57d4dda06e807d517f1212f3f52986800e3edf891ef32447a4bf0ac7370df180212401022d97c8a6f028070d61134a8fb66e3a39d6563e7665db09b5f59a2e51  audiocd-kio-19.12.1.tar.xz"
