--- a/community/konsole/APKBUILD
+++ b/community/konsole/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=konsole
 pkgver=19.12.1
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://kde.org/applications/system/konsole"
 pkgdesc="KDE's terminal emulator"
 license="GPL-2.0-only AND LGPL-2.1-or-later AND Unicode-DFS-2016"
