testing/podman: add missing dependencies

--- a/testing/podman/APKBUILD
+++ b/testing/podman/APKBUILD
@@ -2,13 +2,13 @@
 # Maintainer: Michał Polański <michal@polanski.me>
 pkgname=podman
 pkgver=1.7.0
-pkgrel=2
+pkgrel=3
 pkgdesc="Simple management tool for pods, containers, and images"
 url="https://podman.io/"
 options="!check" # TODO: enable tests
 arch="all"
 license="Apache-2.0"
-depends="conmon cni-plugins"
+depends="conmon cni-plugins runc iptables ip6tables"
 makedepends="go gpgme-dev libseccomp-dev libassuan-dev go-md2man btrfs-progs-dev bash"
 subpackages="$pkgname-doc
 	$pkgname-bash-completion:bashcomp:noarch
