community/mpv: upgrade to 0.32.0

--- a/community/mpv/APKBUILD
+++ b/community/mpv/APKBUILD
@@ -4,7 +4,7 @@
 # Contributor: Jakub Skrzypnik <j.skrzypnik@openmailbox.org>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=mpv
-pkgver=0.31.0
+pkgver=0.32.0
 pkgrel=0
 pkgdesc="Video player based on MPlayer/mplayer2"
 url="https://mpv.io/"
@@ -55,6 +55,7 @@ subpackages="
 	$pkgname-doc
 	$pkgname-libs
 	$pkgname-dev
+	$pkgname-bash-completion:bashcomp:noarch
 	$pkgname-zsh-completion:zshcomp:noarch
 	"
 options="net" # downloads a waf tarball
@@ -105,13 +106,19 @@ package() {
 		"$pkgdir"/usr/share/doc/mpv/examples/
 }
 
+# NOTE(maxice8): Remove these 2 functions once the default functions as defined
+# in https://gitlab.alpinelinux.org/alpine/abuild/merge_requests/16 are merged
+bashcomp() {
+	pkgdesc="Bash completions for $pkgname"
+	install_if="$pkgname=$pkgver-r$pkgrel bash-completion"
+	amove usr/share/bash-completion
+}
+
 zshcomp() {
 	pkgdesc="Zsh completions for $pkgname"
 	install_if="$pkgname=$pkgver-r$pkgrel zsh"
 
-	mkdir -p "$subpkgdir/usr/share/zsh/site-functions"
-	mv "$pkgdir/usr/share/zsh/site-functions"/* \
-		"$subpkgdir/usr/share/zsh/site-functions"
+	amove usr/share/zsh/site-functions
 }
 
-sha512sums="5199183d35bc2d7fffde1af250edf829fe768cedd7aa00f424d2a11a11d82cdb451c62886159ba3e1efc407b242c25e2485f4ebffd13b1da9c70defbd1f4c309  mpv-0.31.0.tar.gz"
+sha512sums="f6426c0254ec0bf2f120e2196904f1e15fe17032b06764abca1d5e074f0cabb452eaf1cd09f8fd9b25b591accee7b881bfc3b06c19d5c98980305c4712486bd6  mpv-0.32.0.tar.gz"
