main/perl-yaml: upgrade to 1.30

--- a/main/perl-yaml/APKBUILD
+++ b/main/perl-yaml/APKBUILD
@@ -3,16 +3,14 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=perl-yaml
 _pkgreal=YAML
-pkgver=1.29
+pkgver=1.30
 pkgrel=0
 pkgdesc="YAML Ain't Markup Language (tm)"
-url="http://search.cpan.org/dist/YAML/"
+url="https://metacpan.org/release/YAML"
 arch="noarch"
-license="GPL PerlArtistic"
-cpandepends=""
-cpanmakedepends=""
-depends="$cpandepends"
-makedepends="perl-dev $cpanmakedepends"
+license="GPL-1.0-or-later OR Artistic-1.0-Perl"
+depends="perl"
+makedepends="perl-dev"
 checkdepends="perl-test-yaml perl-test-deep"
 options="!check" # multiple test dependencies are in community and several packages in main depends on it
 subpackages="$pkgname-doc"
@@ -20,26 +18,22 @@ source="http://search.cpan.org/CPAN/authors/id/T/TI/TINITA/$_pkgreal-$pkgver.tar
 builddir="$srcdir/$_pkgreal-$pkgver"
 
 prepare() {
-	cd "$builddir"
 	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	PERL_MM_USE_DEFAULT=1 perl Makefile.PL INSTALLDIRS=vendor
 }
 
 build() {
-	cd "$builddir"
 	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	make
 }
 
 check() {
-	cd "$builddir"
 	make test
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
 
-sha512sums="a3bcec325360694826781f78611b7855bcf9ddd58a009d836d222d8b63f42e2c6565304df70e6b13af415e45761ac16a4cef9dcf0ed05ff9dec8cf2d94c33572  YAML-1.29.tar.gz"
+sha512sums="f73f2d9f3cd96edeb05ec098c859755dd6b80bf1a00049f8de2889ebbf4f41df9fcc1540116afa8648e965a0b780d993f256af2c5ffc03a9f1ba7df1f0cc8941  YAML-1.30.tar.gz"
