--- a/community/kcron/APKBUILD
+++ b/community/kcron/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=kcron
 pkgver=19.12.1
 pkgrel=0
-arch="all"
+arch="all !armhf" # Missing dependencies
 url="https://kde.org/applications/system/"
 pkgdesc="Configure and schedule tasks"
 license="GPL-2.0-or-later"
