--- a/testing/volatility3/APKBUILD
+++ b/testing/volatility3/APKBUILD
@@ -3,12 +3,12 @@
 pkgname=volatility3
 pkgver=1.0.0_beta1
 _pkgver=${pkgver/_beta1/-beta.1}
-pkgrel=0
+pkgrel=1
 pkgdesc="Volatile memory forensics toolkit"
 url="https://github.com/volatilityfoundation/volatility3"
 arch="noarch"
 license="GPL-2.0"
-depends="py3-crypto py3-capstone"
+depends="py3-crypto py3-capstone py3-yara"
 makedepends="py3-setuptools"
 source="$pkgname-$pkgver.tar.gz::https://github.com/volatilityfoundation/volatility3/archive/v$_pkgver.tar.gz"
 builddir="$srcdir/$pkgname-$_pkgver"
