--- a/main/perl-yaml-syck/APKBUILD
+++ b/main/perl-yaml-syck/APKBUILD
@@ -3,46 +3,38 @@
 # Maintainer: Timo Teräs <timo.teras@iki.fi>
 pkgname=perl-yaml-syck
 _pkgreal=YAML-Syck
-pkgver=1.31
-pkgrel=2
+pkgver=1.32
+pkgrel=0
 pkgdesc="Fast, lightweight YAML loader and dumper"
-url="http://search.cpan.org/dist/YAML-Syck/"
+url="https://metacpan.org/release/YAML-Syck"
 arch="all"
 license="MIT"
-cpandepends=""
-cpanmakedepends=""
-cpancheckdepends=""
-depends="$cpandepends"
-makedepends="perl-dev $cpanmakedepends"
-checkdepends="$cpancheckdepends"
+depends="perl"
+makedepends="perl-dev"
 subpackages="$pkgname-doc"
-source="http://search.cpan.org/CPAN/authors/id/T/TO/TODDR/$_pkgreal-$pkgver.tar.gz"
+source="https://cpan.metacpan.org/authors/id/T/TO/TODDR/YAML-Syck-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgreal-$pkgver"
 
 prepare() {
-	default_prepare || return 1
+	default_prepare
 
-	cd "$builddir"
 	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	PERL_MM_USE_DEFAULT=1 perl Makefile.PL INSTALLDIRS=vendor
 }
 
 build() {
-	cd "$builddir"
 	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	make
 }
 
 package() {
-	cd "$builddir"
-	make DESTDIR="$pkgdir" install || return 1
+	make DESTDIR="$pkgdir" install
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
 
 check() {
-	cd "$builddir"
 	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	make test
 }
 
-sha512sums="5177f415f1f3f0d46b9fc51e43478da627edc3d7e89d9baf095fdda2cd9f93eb46784429f1665fead2b3377a2749c6fb937a91136bbe713d79000c12206a83f5  YAML-Syck-1.31.tar.gz"
+sha512sums="284d62f1fabdcca9fbdc57b732f5b9b2c2739020c620dbb66e84a89ea83e0a80580ec8fd8516a1c080dd9de9a817dbe357ee66041daa5103a8bf49c436355c99  YAML-Syck-1.32.tar.gz"
