testing/procs: upgrade to 0.9.2

--- a/testing/procs/APKBUILD
+++ b/testing/procs/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Chloe Kudryavtsev <toast@toastin.space>
 # Maintainer: Chloe Kudryavtsev <toast@toastin.space>
 pkgname=procs
-pkgver=0.8.16
+pkgver=0.9.2
 pkgrel=0
 pkgdesc="A modern replacement for ps written in Rust"
 url="https://github.com/dalance/procs"
@@ -24,17 +24,19 @@ export CARGO_HOME="$srcdir"/cargo
 build() {
 	cargo build \
 		--release \
-		--verbose
+		--verbose \
+		--locked
 }
 
 check() {
 	cargo test --all \
 		--release \
-		--verbose
+		--verbose \
+		--locked
 }
 
 package() {
 	install -Dm755 target/release/"$pkgname" "$pkgdir"/usr/bin/"$pkgname"
 }
 
-sha512sums="b3380cd7eb98b4d3a13888f67032269176f05689e507466c149de91af056379969b80cc5e59d3f7dd10c29507644dd3b816f0022d42feb4a31a4afdfdd036ca3  procs-0.8.16.tar.gz"
+sha512sums="62cfd4feab1fbdf3c6ce5267a5f79162bbdc4fbda985e4dde8dbdf04d549e95c98eb399620d049a871c640d5e5e6cb354de30fb4f175b80215f71e8ae92c2795  procs-0.9.2.tar.gz"
