main/check: upgrade to 0.14.0

--- a/main/check/APKBUILD
+++ b/main/check/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Fabian Affolter <fabian@affolter-engineering.ch>
 # Maintainer: Fabian Affolter <fabian@affolter-engineering.ch>
 pkgname=check
-pkgver=0.13.0
+pkgver=0.14.0
 pkgrel=0
 pkgdesc="A unit test framework for C"
 url="https://libcheck.github.io/check/"
@@ -10,17 +10,14 @@ license="LGPL-2.0-or-later"
 makedepends="pkgconfig texinfo autoconf automake libtool"
 checkdepends="diffutils gawk"
 subpackages="$pkgname-doc $pkgname-dev"
-source="https://github.com/libcheck/check/releases/download/$pkgver/check-$pkgver.tar.gz
-	do-not-check-for-tex.patch"
+source="https://github.com/libcheck/check/releases/download/$pkgver/check-$pkgver.tar.gz"
 
 prepare() {
 	default_prepare
-	cd "$builddir"
 	autoreconf -vfi
 }
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -33,14 +30,11 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="9e3a3b4b2e1aae02f6481a3d944a5a9216c1f03d85a2bbd63c05d047095fe16b78e5c4094b464fe531650daba24c58d7343f7ec059ce0e127e9aff1ff86213d0  check-0.13.0.tar.gz
-79b421a3154f904350352a787801b4db337bd7fed728e613ee2aad8fc9cdbcfbf2c7ec476a2753780a773a3cb3b54e9e7a4ae1d2ea4bd641e1dd6730d389b628  do-not-check-for-tex.patch"
+sha512sums="07fc85b5eecffeb407f554c0cb737126ed6d68ba0db3d74c14697505f2b410496ff72311f08bbf43d7af1c971f0475e776966e320bfb3fe00cde1ecbe1d6f367  check-0.14.0.tar.gz"
