--- a/main/perl-error/APKBUILD
+++ b/main/perl-error/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer:  Leonardo Arena <rnalrd@alpinelinux.org>
 pkgname=perl-error
 _realname=Error
-pkgver=0.17028
+pkgver=0.17029
 pkgrel=0
 pkgdesc="Perl module error/exception handling in an OO-ish way"
 url="https://metacpan.org/release/Error"
@@ -10,30 +10,26 @@ license="GPL-1.0-or-later OR Artistic-1.0-Perl"
 depends="perl"
 makedepends="perl-dev"
 subpackages="$pkgname-doc"
-source="http://search.cpan.org/CPAN/authors/id/S/SH/SHLOMIF/$_realname-$pkgver.tar.gz"
+source="https://cpan.metacpan.org/authors/id/S/SH/SHLOMIF/Error-$pkgver.tar.gz"
 builddir="$srcdir"/$_realname-$pkgver
 
 prepare() {
-	cd "$builddir"
 	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	PERL_MM_USE_DEFAULT=1 perl Makefile.PL INSTALLDIRS=vendor
 }
 
 build() {
-	cd "$builddir"
 	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	make
 }
 
 check() {
-	cd "$builddir"
 	make test
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
 
-sha512sums="bba62e9cac092f53e7606d7673a6cbf4e2684eefd7a44e17859071e6a2dfb45ea471279443b287e1b40dfb89ce351d17d92151d91d6ad59a7737a32e472c58fc  Error-0.17028.tar.gz"
+sha512sums="266ba1feff897c1d162e69a83e595cb40da9a6e1d8b10cc5531626eff392c6da94be03ba722c74827fc2ea0d9d1c1e62e824d9021e098b700db65dd0b3acbd0a  Error-0.17029.tar.gz"
