--- a/community/docker-py/APKBUILD
+++ b/community/docker-py/APKBUILD
@@ -2,14 +2,14 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=docker-py
 pkgver=4.1.0
-pkgrel=1
+pkgrel=3
 pkgdesc="Python library for the Docker Engine API"
 url="https://github.com/dotcloud/docker-py"
 arch="noarch"
 license="Apache-2.0"
 depends="dockerpy-creds py3-cparser py3-cryptography py3-ipaddress
 	py3-packaging py3-parsing py3-requests py3-websocket-client"
-makedepends="py3-flake8 py3-mock py3-pip py3-setuptools py3-six python3-dev"
+makedepends="py3-flake8 py3-mock py3-setuptools py3-six python3-dev"
 source="$pkgname-$pkgver.tar.gz::https://github.com/docker/$pkgname/archive/$pkgver.tar.gz"
 
 check() {
