--- a/community/py3-setuptools_scm/APKBUILD
+++ b/community/py3-setuptools_scm/APKBUILD
@@ -3,14 +3,14 @@
 pkgname=py3-setuptools_scm
 _pkgname=setuptools_scm
 pkgver=3.4.3
-pkgrel=0
-pkgdesc="the blessed package to manage your versions by scm tags"
+pkgrel=1
+pkgdesc="The blessed package to manage your versions by scm tags"
 url="https://github.com/pypa/setuptools_scm"
 arch="noarch"
 license="MIT"
 depends="python3"
 makedepends="py3-setuptools"
-checkdepends="py3-pytest py3-pip git mercurial py3-toml"
+checkdepends="py3-pytest git mercurial py3-toml"
 source="https://files.pythonhosted.org/packages/source/${_pkgname:0:1}/$_pkgname/$_pkgname-$pkgver.tar.gz"
 builddir="$srcdir"/$_pkgname-$pkgver
 
