main/sqlite: upgrade to 3.31.1

--- a/main/sqlite/APKBUILD
+++ b/main/sqlite/APKBUILD
@@ -1,8 +1,8 @@
 # Maintainer: Carlo Landmeter <clandmeter@gmail.com>
 # Contributor: Łukasz Jendrysik <scadu@yandex.com>
 pkgname=sqlite
-pkgver=3.30.1
-pkgrel=1
+pkgver=3.31.1
+pkgrel=0
 pkgdesc="C library that implements an SQL database engine"
 url="https://www.sqlite.org/"
 arch="all"
@@ -27,10 +27,8 @@ _ver=${_a}${_b}${_c}${_d}
 
 # these variables depend on _ver being set
 builddir="$srcdir/$pkgname-autoconf-$_ver"
-source="https://www.sqlite.org/2019/$pkgname-autoconf-$_ver.tar.gz
+source="https://www.sqlite.org/2020/$pkgname-autoconf-$_ver.tar.gz
 	license.txt
-	CVE-2019-19242.patch
-	CVE-2019-19244.patch
 	"
 
 # secfixes:
@@ -57,8 +55,6 @@ _amalgamation="-DSQLITE_ENABLE_FTS4 \
 	-DSQLITE_ENABLE_JSON1"
 
 build() {
-	cd "$builddir"
-
 	export CFLAGS="$CFLAGS $_amalgamation"
 	./configure \
 		--build="$CBUILD" \
@@ -78,14 +74,11 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
-
-	make -j1 DESTDIR="$pkgdir" install
+	make DESTDIR="$pkgdir" install
 
 	install -Dm0644 sqlite3.1 \
 		"$pkgdir"/usr/share/man/man1/sqlite3.1
@@ -107,7 +100,5 @@ static() {
 	mv "$pkgdir"/usr/lib/lib*.a "$subpkgdir"/usr/lib/
 }
 
-sha512sums="9ec0283c417fb0323b0e43550af2a49e9a63988e4212c27ea62cc9da3534caa6faf5bdc7e051b6772c4ce61560a433b3d3288b68e05e9ba8495f61a3bcebda3e  sqlite-autoconf-3300100.tar.gz
-5bde14bec5bf18cc686b8b90a8b2324c8c6600bca1ae56431a795bb34b8b5ae85527143f3b5f0c845c776bce60eaa537624104cefc3a47b3820d43083f40c6e9  license.txt
-c4e8123da7d85d59c9d2d1d07e443185cbc82102805361f2dd24da0482b683da57b7032f2c27273b46e6ed1b12f3714590cfc1258720bcb4e8405f67da214fe6  CVE-2019-19242.patch
-e7982014a62b4fa465918fd65384cec406ea09598f3e0511eb2b68f618983b2f29a932267397aff9b88b97367dc8e05c4074fa8e276e3f4294ac019df498a724  CVE-2019-19244.patch"
+sha512sums="d85250ba5f78f0c918880f663741709aba662192f04888b2324a0df17affdf5b8540e8428c6c7315119806e7adad758ea281c9b403c0ad94ac6a9bd1b93fd617  sqlite-autoconf-3310100.tar.gz
+5bde14bec5bf18cc686b8b90a8b2324c8c6600bca1ae56431a795bb34b8b5ae85527143f3b5f0c845c776bce60eaa537624104cefc3a47b3820d43083f40c6e9  license.txt"
