--- a/community/yadifa/APKBUILD
+++ b/community/yadifa/APKBUILD
@@ -12,16 +12,14 @@ makedepends="openssl-dev"
 install="$pkgname.post-install"
 options="!libtool"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-openrc"
-source="http://cdn.yadifa.eu/sites/default/files/releases/$pkgname-$pkgver-$_buildnr.tar.gz
+source="http://cdn.yadifa.eu/sites/default/files/releases/yadifa-$pkgver-$_buildnr.tar.gz
 	musl-fixes.patch
-	libressl-2.7.patch
 	$pkgname.initd
 	$pkgname.confd"
 
 builddir="$srcdir"/$pkgname-$pkgver-$_buildnr
 
 build() {
-	cd "$builddir"
 	./configure \
 		--prefix=/usr \
 		--build=$CBUILD \
@@ -38,12 +36,10 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 	install -D -m 0755 "$srcdir"/$pkgname.initd "$pkgdir"/etc/init.d/$pkgname
 	install -D -m 0755 "$srcdir"/$pkgname.confd "$pkgdir"/etc/conf.d/$pkgname
@@ -55,6 +51,5 @@ package() {
 
 sha512sums="bc7e33caa04ac0e8dec4c7cfc5ce6190932e3daf19fd2598309c8b1d5dc72a8811fa68cacac32a5750a76368d91d6bed90e6fc53d472252ceb4b1be611da22aa  yadifa-2.3.9-8497.tar.gz
 dec2505a3d2f722a5d90cac94f29e01c91f29e8e6fc07d8ef3ff0ee070920164c72fc86b5ce578a5d016d1dade0b8540faded84a817caa4995a06333fd51f3f5  musl-fixes.patch
-41ce4dc505a59925b565b4de3e5acbf816eeafdebc7f723b9534b49f2e30fd854b59d2d0434d80f5770aa84a8785c6480d2bf4e5c8be2651ec1ed421b398a014  libressl-2.7.patch
 a3a65bf13f41838d9493facc2903d955aafd107a29d8a73d4ed021690e1e2c511f48915360a9490ccbf8d9573f8e9c3fca988cb6dd5e57546787384e2b2d075d  yadifa.initd
 eac74148b58d3b7472602542622616bd0ef441b191356a5b7fd06d17284c579139c1fde9b35fbb30a8214394863e31bed4c8521aff7b3f7ea831f14c2a3ccf01  yadifa.confd"
