--- a/community/ceph/APKBUILD
+++ b/community/ceph/APKBUILD
@@ -1,15 +1,15 @@
 # Contributor: John Coyle <dx9err@gmail.com>
 # Maintainer: Iggy Jackson <iggy@kws1.com>
 pkgname=ceph
-pkgver=14.2.4
-pkgrel=3
+pkgver=14.2.7
+pkgrel=0
 pkgdesc="Ceph is a distributed object store and file system"
 pkgusers="ceph"
 pkggroups="ceph"
 url="https://ceph.com/"
 arch="x86_64 aarch64"
 # https://github.com/ceph/ceph/blob/master/COPYING
-license="LGPL-2.1-only AND LGPL-2.0-or-later AND GPL-2.0-only AND GPL-3.0-only AND CC-BY-SA-1.0 AND BSL-1.0 AND GPL-2.0 WITH Autoconf-exception-2.0 AND BSD-3-Clause AND MIT AND custom"
+license="LGPL-2.1-only AND LGPL-2.0-or-later AND GPL-2.0-only AND GPL-3.0-only AND CC-BY-SA-1.0 AND BSL-1.0 AND GPL-2.0-or-later WITH Autoconf-exception-2.0 AND BSD-3-Clause AND MIT AND custom"
 depends="ceph-osd ceph-mds ceph-mon"
 options="!checkroot"
 _base_deps="
@@ -51,8 +51,10 @@ makedepends="
 	leveldb-dev
 	libaio-dev
 	libatomic_ops-dev
+	libcap-ng-dev
 	libedit-dev
 	openssl-dev
+	libnl3-dev
 	libtirpc-dev
 	libtool
 	libxml2-dev
@@ -88,7 +90,6 @@ makedepends="
 source="https://download.ceph.com/tarballs/ceph_$pkgver.orig.tar.gz
 	allperms.patch
 	musl-fixes.patch
-	boost-1.70.patch
 	"
 subpackages="
 	$pkgname-doc
@@ -122,6 +123,9 @@ subpackages="
 "
 
 # secfixes:
+#   14.2.7-r0:
+#     - CVE-2020-1699
+#     - CVE-2020-1700
 #   14.2.3-r0:
 #     - CVE-2019-10222
 
@@ -518,7 +522,6 @@ _pkg() {
 	done
 }
 
-sha512sums="dc60321ed4dcaccacca711ab70c35011b5dfc6b8369016fb413a9976199ed4ba22c7dc87ba1ebaf1118513dee1a0c263c99ab137f27fc03c55e8a0625a3bdcc0  ceph_14.2.4.orig.tar.gz
+sha512sums="59f475e56053ba5e7e3a482a3a91b4d44272e6ec8051b92783de76c09c0d967a7ef76676db998968a709e48f08e90828dd8f86bd96a7c3fd111d48bfb7fd93b1  ceph_14.2.7.orig.tar.gz
 e1becd813ed3f28e2e4a6bef78b3b5117c1c0bb9cabe0ba9c912e0a20b551b6b2667495cddb94acd64192e287144911ff1c11e0d636fe04cc458146cfb0daca8  allperms.patch
-35722b11ad52a3145153635b6a96abda2a23ae9c7e63e2eac006c1e5b8014452c4a1a11bbe0292fd731e4c43aa38e27dd75d2ff9d25bcf52290278f71e868570  musl-fixes.patch
-0211c84da189f71af7914350ebbfa6fc588c854bad501453344a8d13a18a56ea895118d576bed65b592ea2925efe92b86c769ebc85156a559b2acd0ee884157b  boost-1.70.patch"
+35722b11ad52a3145153635b6a96abda2a23ae9c7e63e2eac006c1e5b8014452c4a1a11bbe0292fd731e4c43aa38e27dd75d2ff9d25bcf52290278f71e868570  musl-fixes.patch"
