--- a/community/sleuthkit/APKBUILD
+++ b/community/sleuthkit/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Francesco Colista <fcolista@alpinelinux.org>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=sleuthkit
-pkgver=4.7.0
+pkgver=4.8.0
 pkgrel=0
 pkgdesc="File system and media management forensic analysis tools"
 arch="all"
@@ -10,31 +10,29 @@ depends="perl"
 url="http://www.sleuthkit.org/sleuthkit"
 makedepends="autoconf automake libtool sqlite-dev"
 options="libtool"
-subpackages="$pkgname-dev $pkgname-doc"
-source="https://github.com/sleuthkit/sleuthkit/releases/download/$pkgname-$pkgver/$pkgname-$pkgver.tar.gz
+subpackages="$pkgname-static $pkgname-dev $pkgname-libs $pkgname-doc"
+source="https://github.com/sleuthkit/sleuthkit/releases/download/sleuthkit-$pkgver/sleuthkit-$pkgver.tar.gz
 	30_fix-manpages.patch
 	40_no_static_ldflags.patch
-	50_disable_ant_clean.patch"
-
-builddir="$srcdir"/$pkgname-$pkgver
+	50_disable_ant_clean.patch
+	"
 
 build() {
-	cd "$builddir"
 	# https://github.com/sleuthkit/sleuthkit/issues/642
 	export CFLAGS="$CFLAGS -DHAVE_LIBEWF_V2_API -Dlibewf_handle_read_random=libewf_handle_read_buffer_at_offset"
+	export CXXFLAGS="$CXXFLAGS -Wno-error=cpp"
 	./configure --prefix=/usr
 	make
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 	install -d "$pkgdir"/usr/share/licenses/$pkgname
 	install -Dm0644 licenses/* "$pkgdir"/usr/share/licenses/$pkgname
 
 }
 
-sha512sums="bd39101f89615485c17d72836689ee14cf1199c26f2a84a56c4a127d6ced1acf091ff8a4bd373acd970c8a88e3625edc3f6e7d028f292f74439590b11c15be80  sleuthkit-4.7.0.tar.gz
+sha512sums="c7beec99471344cb6e0d2f2619788857120922eb67a83cc42f919890da6ec7cea48e7cf59bd546c04db73c0eab52657a8510bc86df44c574a51e59664fdfdb76  sleuthkit-4.8.0.tar.gz
 4b68367bff62c731c09ab9a95f810b11562f0942021825226ca8d5e846e54c64004f77ac587ea0377bcb5c50c9dcb33dba1caa8cffd717076cc13c9931dd2c9c  30_fix-manpages.patch
 e0421b2fc4bb1d04d3bdb13805d060b386f700586d9e33728185eaff26eef14d5fdbf89979fb5d898dfeee7467f891b5d3c33441f9cb35af5f93d3d576e7cc26  40_no_static_ldflags.patch
 cb0d17840f1b4570da1ee0d092f8716a7e073463658d4a7b1cddb74058c5eccf316fcbd2e7c5fba3af0f0adaaabe4e395bd5a41aa1438be615edacb8c6efd89d  50_disable_ant_clean.patch"
