--- a/community/milter-greylist/APKBUILD
+++ b/community/milter-greylist/APKBUILD
@@ -13,10 +13,10 @@ subpackages="$pkgname-doc $pkgname-openrc"
 pkgusers="smmsp"
 pkggroups="smmsp"
 options="!check" # no test suite
-source="ftp://ftp.espci.fr/pub/milter-greylist/$pkgname-$pkgver.tgz
+source="ftp://ftp.espci.fr/pub/milter-greylist/milter-greylist-$pkgver.tgz
 	milter-greylist-conf.patch
+	milter-greylist.initd
 	"
-builddir="$srcdir"/$pkgname-$pkgver
 
 prepare() {
 	default_prepare
@@ -24,7 +24,6 @@ prepare() {
 }
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -47,13 +46,13 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
-	install -m755 -D ../../$pkgname.initd "$pkgdir"/etc/init.d/$pkgname
+	install -m755 -D "$srcdir"/$pkgname.initd "$pkgdir"/etc/init.d/$pkgname
 	install -m644 -D greylist2.conf "$pkgdir"/etc/$pkgname/greylist2.conf
 	mkdir -p "$pkgdir"/var/lib/$pkgname
 	chown -R smmsp:smmsp "$pkgdir"/var/lib/$pkgname
 }
 
 sha512sums="458b4e74cadca6cb50838b87a192392cc19bde61062d2b25b2ca0fc515a277b53d177d9605f34aff1671f7722462c31ce419a4e058ca6ea23b80a8debf33079c  milter-greylist-4.6.2.tgz
-4057061fae24a8d008c6a8aed82018a4bb9f6e9ce72a13d9369d54b192e9a6e99b0e72db8905aa182879c9522b87a92844d0be92773843773508a21e42dbd447  milter-greylist-conf.patch"
+4057061fae24a8d008c6a8aed82018a4bb9f6e9ce72a13d9369d54b192e9a6e99b0e72db8905aa182879c9522b87a92844d0be92773843773508a21e42dbd447  milter-greylist-conf.patch
+63f9e24d894980388cb5e5ae34e3adb5f9b5fa167e77c290fe72587002366c225a2fa9607d322eaa485c98cbdd68e14bdaa4b91ad46083f5f3a409eb5e6103f9  milter-greylist.initd"
