--- a/community/vlc/APKBUILD
+++ b/community/vlc/APKBUILD
@@ -119,6 +119,8 @@ source="https://get.videolan.org/vlc/$pkgver/vlc-$pkgver.tar.xz
 	disable-sub-autodetect-fuzzy-1-test.patch
 	test-s390x.patch
 	fribidi_allow_deprecated.patch
+	vlc.initd
+	vlc.confd
 	"
 
 # secfixes:
@@ -280,8 +282,8 @@ daemon() {
 
 	mkdir -p "$subpkgdir"
 	cd "$pkgdir"
-	install -D -m755 ../../vlc.initd $subpkgdir/etc/init.d/vlc
-	install -D -m664 ../../vlc.confd $subpkgdir/etc/conf.d/vlc
+	install -D -m755 "$srcdir"/vlc.initd $subpkgdir/etc/init.d/vlc
+	install -D -m664 "$srcdir"/vlc.confd $subpkgdir/etc/conf.d/vlc
 	install -d -o vlc -g vlc "$subpkgdir"/var/log/vlc
 }
 
@@ -331,4 +333,6 @@ e13e398b7bfd977f6e099bcb6cf8dc5cd5bad6dea3eff715881826246dc4329468846084aff2576d
 22d80df599b8b65a5439cefbb7140af8e9530f326d54945da3769af65f37518b99ec2cc8647aafd2763324a0698280915afe043cc87e5720c4694881ed35bffa  check-headless.patch
 e214b407235cb3afb8bec93f20c9b42957b57e6fd3960679d3d4235e77762e03e64d03c01f00ef63d589e7c85aaad02ce6abbeeccd66b1867bc92451a5b5e9b0  disable-sub-autodetect-fuzzy-1-test.patch
 c0107655249687655846a9547ca1a5670b9207443180600e7a149c69ffb96d7226787c19b018d4033db9b284c1a5faa8d7d42188ed40c3b8bb051256febf11c5  test-s390x.patch
-8230a83306905cdda07fecdb6cb2b791196034775cc5c8986ab63e97cd3476317544011cbce92948059ac9f7b57ef450cd71820f0f134bc3ab3bed38463a67c3  fribidi_allow_deprecated.patch"
+8230a83306905cdda07fecdb6cb2b791196034775cc5c8986ab63e97cd3476317544011cbce92948059ac9f7b57ef450cd71820f0f134bc3ab3bed38463a67c3  fribidi_allow_deprecated.patch
+55e245190b443dde9c7215ea5210612fcca164900a9a4b025ccf0d1e3fc5206d00b52355b256974421e37c609875627f1db19f0f5a084511aec0daf677ecc9d6  vlc.initd
+d89190dca1b8b2c3faca5863dc6c7e6eb24e05178e6f75ed752fd3c6a73cb8a42d2625b6e56453296b7096ea868be642ecd42745dac20e7f13fc67dd3c3c7c49  vlc.confd"
