--- a/main/ltrace/APKBUILD
+++ b/main/ltrace/APKBUILD
@@ -4,7 +4,7 @@ pkgver=0.7.3
 pkgrel=4
 pkgdesc="Tracks runtime library calls in dynamically linked programs"
 url="https://www.ltrace.org/"
-arch="all !aarch64"
+arch="all"
 options="!check"  # Test suite has glibc stuff hardcoded.
 license="GPL-2.0-or-later"
 makedepends="linux-headers elfutils-dev autoconf automake"
@@ -13,7 +13,8 @@ subpackages="$pkgname-doc"
 # https://alioth.debian.org/frs/?group_id=30892
 source="https://www.ltrace.org/ltrace_0.7.3.orig.tar.bz2
 	musl.patch
-	add_ppc64le.patch"
+	add_ppc64le.patch
+	ltrace_aarch64.patch"
 
 prepare() {
 	default_prepare
@@ -36,4 +37,5 @@ package() {
 
 sha512sums="a842b16dcb81da869afa0bddc755fdff0d57b35672505bf2c7164fd983b1938d28b126714128930994cc1230ced69d779456d0cfc16f4008c9b6d19f0852285d  ltrace_0.7.3.orig.tar.bz2
 c53e05471c52e161a7f7389994c6467e8f3671c5d8478546bc1897f067c62aeab848d728295f339a241a3fc186e180d47bcc2872a6335877c3813b1b62834698  musl.patch
-987c6d18bdb559e8fe739f09cfb0b567dafcf79b2bd5db7ca32ebb205f3b1d74a8008576e4d73ea90873c1ab9bed17d96ddb7ad8752bf0a160ea0638c955eb1f  add_ppc64le.patch"
+987c6d18bdb559e8fe739f09cfb0b567dafcf79b2bd5db7ca32ebb205f3b1d74a8008576e4d73ea90873c1ab9bed17d96ddb7ad8752bf0a160ea0638c955eb1f  add_ppc64le.patch
+599787e94dc0c8d5ac33e4894640cd10e1087657850b466364a636e8c38a84ef1480d3f68f92a8838d5787e6f0b4cc8cb4af808ac6398d84b216e4f026070a03  ltrace_aarch64.patch"
