--- a/community/gcc6/APKBUILD
+++ b/community/gcc6/APKBUILD
@@ -3,7 +3,7 @@ pkgname=gcc6
 pkgver=6.4.0
 _ver=${pkgver%%.*}
 pkgname="$pkgname"
-pkgrel=10
+pkgrel=11
 pkgdesc="The GNU Compiler Collection"
 url="https://gcc.gnu.org/"
 arch="all"
@@ -66,6 +66,7 @@ source="https://gcc.gnu.org/pub/gcc/releases/gcc-${_pkgbase:-$pkgver}/gcc-${_pkg
 	fix-linux-header-use-in-libgcc.patch
 	gcc-pure64-mips.patch
 	fix-ppc64le-coercion-r261621.patch
+	0017-pr93402.patch
 	"
 
 sonameprefix="$pkgname:"
@@ -354,4 +355,5 @@ f4ef08454e28c8732db69115e4998ec153399e8d229dd27f923dbdcf57b68128a65640d026cc7f45
 01c71cd5881fc07ea3b9b980697e89b3ca0fe98502958ceafc3fca18b2604c844e2f457feab711baf8e03f00a5383b0e38aac7eb954034e306f43d4a37f165ed  fix-rs6000-pie.patch
 34a818d5be67eb1f34e44a80b83c28a9b9c17d37fc9fac639f490d6bb5b53ebe3318140d09c236a17d7c98f5a7792ae3d6cefccda8067a5e942d6305b9d1f87c  fix-linux-header-use-in-libgcc.patch
 86be3338cc9c33089608bc4c5e3b7918c4e500a345c338f361b18c342119a6ed69af5495d72950de7106d760f003528b46ad14795e805f8a3331e206dcb234e3  gcc-pure64-mips.patch
-aae9d510326bed6eca0b1f680d2caf64dd804e73fb9d726c8932faa845c07e1be6ab12920972d8fb80a33dafedcaafca71487b0eaf10e6d5fa7deb853926b933  fix-ppc64le-coercion-r261621.patch"
+aae9d510326bed6eca0b1f680d2caf64dd804e73fb9d726c8932faa845c07e1be6ab12920972d8fb80a33dafedcaafca71487b0eaf10e6d5fa7deb853926b933  fix-ppc64le-coercion-r261621.patch
+0e20a5717c20ddc1d9f00276453b0abb4868adff0496604ad7d5b766a1028181c09c2061c5648bcfd4cb29dca7048cc866d2f27c013d82c2440164f17eac685d  0017-pr93402.patch"
