--- a/community/py3-udev/APKBUILD
+++ b/community/py3-udev/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=py3-udev
-pkgver=0.21.0
-pkgrel=4
+pkgver=0.22
+pkgrel=0
 pkgdesc="Python bindings to libudev"
 options="!check" # tries to use pytest_namespace
 url="http://pyudev.readthedocs.org"
@@ -10,9 +10,7 @@ license="LGPL-2.1-or-later"
 depends="eudev py3-six"
 makedepends="py3-setuptools"
 checkdepends="py3-docutils py3-pytest py3-mock py3-hypothesis"
-source="py-udev-$pkgver.tar.gz::https://github.com/pyudev/pyudev/archive/v$pkgver.tar.gz
-	pytest.patch
-	"
+source="py-udev-$pkgver.tar.gz::https://github.com/pyudev/pyudev/archive/v$pkgver.tar.gz"
 builddir="$srcdir/pyudev-$pkgver"
 
 replaces="py-udev" # Backwards compatibility
@@ -30,5 +28,4 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="c6cc8786c69de2a07eeae39cb57e33db6ca5fea83c38fdab277070bf052c97bd053911ab08a11fe65cb56c463492111e74451801390d89dc7f00fd00e68bba19  py-udev-0.21.0.tar.gz
-4275228caa5a079b0a9db77efab4ccd5c817c85c7cfdf65f10b793085e8636d17616be55225ecf87de1018c350722adcd642ebd811feaf6a09445d200d17f892  pytest.patch"
+sha512sums="b509f4442e1c11eea9755fbae867b0aee97221db60d78ed2b8da40c39fb11015982b2e9b423680ed44b3f9db2c84b3a0a57a1e8aad4fb939061e33646638d9e3  py-udev-0.22.tar.gz"
