community/libzip: upgrade to 1.6.0

--- a/community/libzip/APKBUILD
+++ b/community/libzip/APKBUILD
@@ -2,42 +2,35 @@
 # Contributor: Jose-Luis Rivas <ghostbar@riseup.net>
 # Maintainer: Carlo Landmeter <clandmeter@gmail.com>
 pkgname=libzip
-pkgver=1.5.2
+pkgver=1.6.0
 pkgrel=0
 pkgdesc="C library for manipulating zip archives"
 url="http://www.nih.at/libzip/index.html"
 arch="all"
 license="BSD-3-Clause"
-depends_dev="zlib-dev"
+depends_dev="zlib-dev xz-dev"
 makedepends="$depends_dev cmake openssl-dev perl"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-tools"
-source="https://www.nih.at/libzip/$pkgname-$pkgver.tar.xz
-	build-static-and-dynamic.patch
-	"
-builddir="$srcdir/$pkgname-$pkgver"
+source="https://www.nih.at/libzip/libzip-$pkgver.tar.xz"
 
 # secfixes:
 #   1.3.0:
 #     - CVE-2017-14107
 
 build() {
-	cd "$builddir"
 	cmake \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DCMAKE_BUILD_TYPE=Release \
-		-DCMAKE_CXX_FLAGS="$CXXFLAGS" \
 		-DCMAKE_C_FLAGS="$CFLAGS"
 	make
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" -j1 install
 }
 
@@ -47,5 +40,4 @@ tools() {
 	mv "$pkgdir"/usr/bin "$subpkgdir"/usr
 }
 
-sha512sums="1e6d48ddbac4d270f70b314f6ada3c93a3196a8cc3b8d17c6cf5ea8409ff29f36ac351206675f9d81351fcf633b0c15d7b0b5530c30c4140e4fe55e64c602643  libzip-1.5.2.tar.xz
-09b31e42e732b3d0e7705c90fa0b3afa5a2d2eaa8dfde4ab24d728158d805dc4e8c803f184b6eb69711f4975a220528578a4d78d88713b4ce405d3892be11fa9  build-static-and-dynamic.patch"
+sha512sums="a173bebc0a199d65d9e2d5e5adf65eb10e9d3a1c409006b3f78e3453aa6166d825fea20e818e725f5d3c6b63137023a2cccb7fb2a1da50a88c4f5f057cf879f8  libzip-1.6.0.tar.xz"
