testing/squeekboard: upgrade to 1.8.0

--- a/testing/squeekboard/APKBUILD
+++ b/testing/squeekboard/APKBUILD
@@ -1,13 +1,14 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=squeekboard
-pkgver=1.7.0
+pkgver=1.8.0
 pkgrel=0
 pkgdesc="The final Phosh keyboard"
 arch="all !s390x !ppc64le" # Blocked by rust, fails to build on ppc64le
 url="https://source.puri.sm/Librem5/squeekboard"
 license="GPL-3.0-or-later"
-makedepends="meson ninja rust cargo bash glib-dev wayland-protocols wayland-dev gtk+3.0-dev libcroco-dev"
+makedepends="meson ninja rust cargo bash glib-dev wayland-protocols wayland-dev
+	gtk+3.0-dev libcroco-dev gnome-desktop-dev"
 checkdepends="xvfb-run"
 source="https://source.puri.sm/Librem5/squeekboard/-/archive/v$pkgver/squeekboard-v$pkgver.tar.gz"
 builddir="$srcdir/$pkgname-v$pkgver"
@@ -30,4 +31,4 @@ check() {
 package() {
 	DESTDIR="$pkgdir" ninja install -C output
 }
-sha512sums="8db66ff7ab9e1983af4bf039a913a3bb74b19892d6d65e49b07466414ae144d45ebe677b888d9611d54f6b5a445445eecf5c96ac634d550b8156d1a044bbb0a3  squeekboard-v1.7.0.tar.gz"
+sha512sums="d112b9828b899644576fd718c067aae608b60d7e882cdefea0523250ce0d0a38303b1f1e8e421220db7fd3b4e5285a9c37e56f596715dde2f71b4063b2f24f4b  squeekboard-v1.8.0.tar.gz"
