community/gcompat: adopt, build with obstack support

--- a/community/gcompat/APKBUILD
+++ b/community/gcompat/APKBUILD
@@ -1,15 +1,15 @@
-# Maintainer: 
+# Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gcompat
 pkgver=0.4.0
-pkgrel=0
+pkgrel=1
 pkgdesc="The GNU C Library compatibility layer for musl"
 url="https://code.foxkit.us/adelie/gcompat"
 arch="all"
 options="!check" # No test suite
 license="NCSA"
-makedepends="libucontext-dev"
+makedepends="libucontext-dev musl-obstack-dev"
 replaces="libc6-compat"
-source="https://distfiles.adelielinux.org/source/gcompat/$pkgname-$pkgver.tar.xz"
+source="https://distfiles.adelielinux.org/source/gcompat/gcompat-$pkgver.tar.xz"
 
 case "$CARCH" in
 	armel) _ld="ld-linux.so.3" ;;
@@ -22,13 +22,21 @@ case "$CARCH" in
 esac
 
 build() {
-	cd "$builddir"
-	make LINKER_PATH="/lib/ld-musl-${CARCH}.so.1" LOADER_NAME="$_ld" WITH_LIBUCONTEXT=1
+	make \
+		WITH_LIBUCONTEXT=1 \
+		WITH_OBSTACK=musl-obstack \
+		LINKER_PATH="/lib/ld-musl-$CARCH.so.1" \
+		LOADER_NAME="$_ld"
 }
 
 package() {
-	cd "$builddir"
-	make LINKER_PATH="/lib/ld-musl-${CARCH}.so.1" LOADER_NAME="$_ld" WITH_LIBUCONTEXT=1 DESTDIR="$pkgdir" install
+	make \
+		LINKER_PATH="/lib/ld-musl-$CARCH.so.1" \
+		LOADER_NAME="$_ld" \
+		WITH_LIBUCONTEXT=1 \
+		WITH_OBSTACK=musl-obstack \
+		DESTDIR="$pkgdir" \
+		install
 }
 
 sha512sums="32b4038a031b9af2d5febb547fe9268eb829f40bb2437c94afe5b939e06e7337448ad7f2dce34362829d19672ede54eec8fc34dc755736dbc76f347906ba5ead  gcompat-0.4.0.tar.xz"
