main/mariadb: upgrade to 10.4.12 and fix deps
ref: https://gitlab.alpinelinux.org/alpine/aports/issues/11131

--- a/main/mariadb/APKBUILD
+++ b/main/mariadb/APKBUILD
@@ -7,7 +7,7 @@
 # Contributor: Jake Buchholz <tomalok@gmail.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=mariadb
-pkgver=10.4.11
+pkgver=10.4.12
 pkgrel=0
 pkgdesc="A fast SQL database server"
 url="https://www.mariadb.org/"
@@ -47,6 +47,8 @@ source="https://downloads.mariadb.org/interstitial/mariadb-$pkgver/source/mariad
 #options="!check"
 
 # secfixes:
+#   10.4.12-r0:
+#     - CVE-2020-2574
 #   10.4.10-r0:
 #     - CVE-2019-2938
 #     - CVE-2019-2974
@@ -343,8 +345,11 @@ client() {
 	local bins="myisam_ftdump mysql mysqlaccess mysqladmin
 		mysqlcheck mysqldump mysqldumpslow mysql_find_rows
 		mysql_fix_extensions mysqlimport mysqlshow mysql_waitpid"
+	local symlinks="mariadb mariadb-access mariadb-admin mariadb-check
+		mariadb-dump mariadb-dumpslow mariadb-find-rows mariadb-fix-extensions
+		mariadb-import mariadb-show mariadb-waitpid"
 	mkdir -p "$subpkgdir"/usr/bin/
-	for i in $bins; do
+	for i in $bins $symlinks; do
 		mv "$pkgdir"/usr/bin/${i} "$subpkgdir"/usr/bin/
 	done
 }
@@ -376,6 +381,7 @@ backup() {
 	pkgdesc="The mariabackup tool for physical online backups"
 	mkdir -p "$subpkgdir"/usr/bin
 	mv "$pkgdir"/usr/bin/mariabackup \
+		"$pkgdir"/usr/bin/mariadb-backup \
 		"$pkgdir"/usr/bin/mbstream \
 		"$subpkgdir"/usr/bin/
 }
@@ -410,15 +416,21 @@ _server_utils() {
 	# perl utils
 	mv \
 		"$pkgdir"/usr/bin/mysql_convert_table_format \
+		"$pkgdir"/usr/bin/mariadb-convert-table-format \
 		"$pkgdir"/usr/bin/mysql_setpermission \
+		"$pkgdir"/usr/bin/mariadb-setpermission \
 		"$pkgdir"/usr/bin/mysqld_multi \
+		"$pkgdir"/usr/bin/mariadbd-multi \
 		"$pkgdir"/usr/bin/mysqlhotcopy \
+		"$pkgdir"/usr/bin/mariadb-hotcopy \
 		"$subpkgdir"/usr/bin/
 	# tools that can be used remotely and other tools
 	mv \
 		"$pkgdir"/usr/bin/mysql_upgrade \
+		"$pkgdir"/usr/bin/mariadb-upgrade \
 		"$pkgdir"/usr/bin/perror \
 		"$pkgdir"/usr/bin/mysqld_safe_helper \
+		"$pkgdir"/usr/bin/mariadbd-safe-helper \
 		"$subpkgdir"/usr/bin/
 }
 
@@ -431,7 +443,7 @@ _plugin_rocksdb() {
 		"$subpkgdir"/usr/lib/mariadb/plugin/ha_rocksdb.so
 }
 
-sha512sums="2a1a8d90e326530b41a8a7d6889325cefcba5914451a48c6a20d5d5cd68004835e76e6ecac628554167a014f9c0b1487c15f37151afd771ea0166a4c40afd7d2  mariadb-10.4.11.tar.gz
+sha512sums="518dae18c04a1f7fcc6fd4d2dfbfbfbdf5e83e72ca41e66e1074328df8d92ab41b458e6a9973771419ac09a7348f264f158916cd198c335085d6e823e707bbc6  mariadb-10.4.12.tar.gz
 c352969f6665b0ffa387f7b185a5dea7751f4b16c12c809627857b27321efa09159369d7dd5c852d6159a9f173cb895fb601f0c52a1fa6e3527899520030964c  mariadb.initd
 70da971aa78815495098205bcbd28428430aa83c3f1050fec0231ca86af9d9def2d2108a48ee08d86812c8dc5ad8ab1ef4e17a49b4936ed5187ae0f6a7ef8f63  pcre.cmake.patch
 e9ae4613f1d8c5f0a59b39a3548c46e50674ae78e7457d0e64c49f7e1573125c13634bbce7e29179bb8865a423171f852f43b96f7ef95619a95f02edcfc71efd  ppc-remove-glibc-dep.patch
