Remove obsolete checksums from testing

--- a/testing/perl-gtk2-ex-widgetbits/APKBUILD
+++ b/testing/perl-gtk2-ex-widgetbits/APKBUILD
@@ -36,4 +36,4 @@ package() {
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
 
-md5sums="f65aadb9213492b2ceaad874c5b49943  Gtk2-Ex-WidgetBits-48.tar.gz"
+sha512sums="d67201f574dc5d081962e16b0439a9759a2e77a72f2530b9f7b6f7dfa214f6be39f91a0a11294d3903e490f6bf1abf1f3c1d09e765f3f9ebcc951cf59aacbbe3  Gtk2-Ex-WidgetBits-48.tar.gz"
