--- a/testing/perl-extutils-xsbuilder/APKBUILD
+++ b/testing/perl-extutils-xsbuilder/APKBUILD
@@ -30,4 +30,4 @@ package() {
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
 
-md5sums="1d33ddeacc01426a02e23c71c2e4cd04  ExtUtils-XSBuilder-0.28.tar.gz"
+sha512sums="777c6362ce1e780f8226b47b5f1a4ee4bbde3e5eda6637dde9d04d230cfb77025a0c7ec79ef40866242950ca2f052865ab0bbfe09f6315a2fda70111f67a47e3  ExtUtils-XSBuilder-0.28.tar.gz"
