--- a/testing/perl-math-libm/APKBUILD
+++ b/testing/perl-math-libm/APKBUILD
@@ -36,4 +36,4 @@ package() {
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
 
-md5sums="26a4ce8fe507d04c7d40b9eadac428ae  Math-Libm-1.00.tar.gz"
+sha512sums="17a1f38e32a82ec9a0307033920559dfe554fdae43b9fefffd7dc0ff690b6c5018079bded8554135da8546ccaf8dc0890e7e9b9a1e3845e53d46c993cec11540  Math-Libm-1.00.tar.gz"
