--- a/testing/perl-term-size-unix/APKBUILD
+++ b/testing/perl-term-size-unix/APKBUILD
@@ -30,4 +30,4 @@ package() {
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
 
-md5sums="d52709b4d11f4d2e241c5640ad9a8b73  Term-Size-Unix-0.205.tar.gz"
+sha512sums="fc9b5bc91f37e9a741bd4ed3a70f31c41e3dc33e6c2f788b55133070deec367fc89842460760dca9f19275aa672e5d900e09be9dabfd09d7662a9e5c74007b19  Term-Size-Unix-0.205.tar.gz"
