main/opensmtpd: add secfixes

--- a/main/opensmtpd/APKBUILD
+++ b/main/opensmtpd/APKBUILD
@@ -2,6 +2,10 @@
 # Contributor: Jonathan Curran <jonathan@curran.in>
 # Contributor: Shiz <hi@shiz.me>
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
+#
+# secfixes:
+#   6.6.2p1-r0:
+#     - CVE-2020-7247
 pkgname=opensmtpd
 pkgver=6.6.2p1
 pkgrel=0
