testing/dino: upgrade to 0_git20200122

--- a/testing/dino/APKBUILD
+++ b/testing/dino/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Galen Abell <galen@galenabell.com>
 # Maintainer: Galen Abell <galen@galenabell.com>
 pkgname="dino"
-pkgver="0_git20200109"
-_pkgsha="3fc9bdab053e23ab8e97afadfee0a05afad8d890"
+pkgver="0_git20200122"
+_pkgsha="3b0a27e14bcce3a06f0ac1199bb0acb5c3434444"
 pkgrel=0
 pkgdesc="Modern Jabber/XMPP client"
 url="https://dino.im"
@@ -14,6 +14,7 @@ makedepends="
 	gtk+3.0-dev
 	gpgme-dev
 	libgee-dev
+	libsignal-protocol-c-dev
 	libgcrypt-dev
 	libsoup-dev
 	sqlite-dev
@@ -46,4 +47,4 @@ check() {
 package() {
 	make DESTDIR="$pkgdir" install
 }
-sha512sums="14efd2b0ced59f750a3a64b175cd94afa821f5a102469d117a3e592730875baea14b2b84dcde50ad7fa2b9d0b9522b1d4b2876be287b0286751b421c2443ce4d  dino-3fc9bdab053e23ab8e97afadfee0a05afad8d890.tar.gz"
+sha512sums="6d06489c031f9530fa73e0f300339eedefcf9d61d6a5df2f61070d75d04c4305895f074317ddb6e4dde878f714fce191e72717f8acb77a5d18f505c5062ef59e  dino-3b0a27e14bcce3a06f0ac1199bb0acb5c3434444.tar.gz"
