testing/ppsspp: upgrade to 1.9

--- a/testing/ppsspp/APKBUILD
+++ b/testing/ppsspp/APKBUILD
@@ -1,18 +1,18 @@
 # Contributor: Díaz Urbaneja Diego <sodomon2@gmail.com>
 # Maintainer: Díaz Urbaneja Diego <sodomon2@gmail.com>
 pkgname=ppsspp
-pkgver=1.8.0
+pkgver=1.9
 pkgrel=0
-pkgdesc="Fast and portable PSP emulator"
+pkgdesc="PPSSPP - a fast and portable PSP emulator"
 url="https://www.ppsspp.org/"
-arch="x86_64" # only available on x86_64 due to compiling problems
+arch="x86_64"  # only available on x86_64 due to compiling problems
 _armips_commit="7885552b208493a6a0f21663770c446c3ba65576"
 _discord_commit="3d3ae7129d17643bc706da0a2eea85aafd10ab3a"
 _glslang_commit="f9d08a25fbe17e0677a89d398f4d7f232339c3f9"
-_spirv_cross_commit="be7425ef70231ab82930331959ab487d605d0482"
+_spirv_cross_commit="a1f7c8dc8ea2f94443951ee27003bffa562c1f13"
 _rapidjson_commit="73063f5002612c6bf64fe24f851cd5cc0d83eef9"
-_lang_commit="03707d64bffc594d5707780a34ada77e8f43cdc0"
-_ffmpeg_commit="7472c903ec771c00af9925097e8d37075e9a379f"
+_lang_commit="bfc3a511f60e84de4d49170e2c442ac36b09cdfd"
+_ffmpeg_commit="90701640c7f458461310b54e7d4041230e2d5d5a"
 license="GPL-2.0-only"
 makedepends="make glew-dev libzip-dev snappy-dev mesa-dev qt5-qtbase-dev zlib-dev sdl2-dev cmake coreutils"
 options="!check" # make check not implemented
@@ -27,8 +27,7 @@ source="ppsspp-$pkgver.tar.gz::https://github.com/hrydgard/ppsspp/archive/v$pkgv
 	ppsspp.desktop
 	ppsspp
 	ppsspp-version.patch
-	ppsspp-headless
-	"
+	ppsspp-headless"
 
 prepare() {
 	default_prepare
@@ -47,7 +46,6 @@ prepare() {
 build() {
 	mkdir build-qt
 	cd build-qt
-	export LANG=C y LC_ALL=C
 	cmake .. \
 		-DUSING_QT_UI=ON \
 		-DHEADLESS=ON
@@ -68,15 +66,15 @@ package() {
 	install -m 644 icons/icon-512.svg "$pkgdir"/usr/share/pixmaps/ppsspp.svg
 }
 
-sha512sums="c49cd9978e115ae0d76c34d125cfd8fe65556aa25f3dabcc0d9f8891d0853fe72e69b20f8540cf2d7be8dbfef9d1baa213147ed965e3e1bc37f230a3919a5384  ppsspp-1.8.0.tar.gz
-2a94e2c7b7280c00a39c8fc92d81ed15fc4b3270a124ef882e3cd8878db6ec827aefa06b0e646a60916636a95e4ebfa886e9878ba70c6bcfcd048def457368be  ppsspp-1.8.0-armips.tar.gz
-17fb5de5d5afea9b7e0cdc116d5e3611b147eb2cde3a295a1a4ceb688bceb93d54feb2e479d511ce39d53a1380462a75dcdf6be9ddc2cece9d44b7f8ff7504af  ppsspp-1.8.0-discord-rpc.tar.gz
-6360a09a7fd69652f84c4b85e1705baf9fecfe53c862625e22e5da1574fa4c2d4d14054bdfd49c5096ce93b371db286cefa28981550b6732ddaac64a7ed09c34  ppsspp-1.8.0-glslang.tar.gz
-9eefacbb6eeb2a010344189ebb2e85e3a69956b3f5f9a5d909d11ffc72030729a532f3db70a5f32cac2a0a3df98d648207ddb052f36e1ab2b53586722ee998e8  ppsspp-1.8.0-SPIRV-Cross.tar.gz
-3472e129e710bf5343b8b27a61581a1480c8096493e466440b62702d8b5353745d561931f72b5405a736ad92525be3843ea1cf4b5ea5839721cc6d6b358f19bc  ppsspp-1.8.0-rapidjson.tar.gz
-7459c930bf05c9fd53921f977febc24b52025a58ef12c08846beb83d021b08ba5960c91680d5d959a1168534d3d47a0967d7dc38fd0e261bd74529bb445f8c3d  ppsspp-1.8.0-lang.tar.gz
-5dc1df0c40b624ca68f7e73d757c14801523f0f7063c52896cd0d71b8b5b570b42a120b7cc7427a0fe022801cce1f8f69ce976a759291c5dbbbde3ac671e783a  ppsspp-1.8.0-ffmpeg.tar.gz
+sha512sums="10114014cb9df93326b6dcbe754b0fa7c80afcf201dbc50a40613e73ad1daf713b285629fbd63ed9c250d6f5ac4cb47331ca5167d65f49ad69d3c1af42daf258  ppsspp-1.9.tar.gz
+2a94e2c7b7280c00a39c8fc92d81ed15fc4b3270a124ef882e3cd8878db6ec827aefa06b0e646a60916636a95e4ebfa886e9878ba70c6bcfcd048def457368be  ppsspp-1.9-armips.tar.gz
+17fb5de5d5afea9b7e0cdc116d5e3611b147eb2cde3a295a1a4ceb688bceb93d54feb2e479d511ce39d53a1380462a75dcdf6be9ddc2cece9d44b7f8ff7504af  ppsspp-1.9-discord-rpc.tar.gz
+6360a09a7fd69652f84c4b85e1705baf9fecfe53c862625e22e5da1574fa4c2d4d14054bdfd49c5096ce93b371db286cefa28981550b6732ddaac64a7ed09c34  ppsspp-1.9-glslang.tar.gz
+b3faff10e2578a27740a013e463750c5244796e651b9586f900a3c97adba060f5e978d47a411f9fb255dd8314e21ea54cccbf90f726d1779448d5dc030f64b65  ppsspp-1.9-SPIRV-Cross.tar.gz
+3472e129e710bf5343b8b27a61581a1480c8096493e466440b62702d8b5353745d561931f72b5405a736ad92525be3843ea1cf4b5ea5839721cc6d6b358f19bc  ppsspp-1.9-rapidjson.tar.gz
+8f0fa9b117e6637911985a6b6a642f94c3d98ad75b1f557dc6511989c695f1e6641ad5ca0f08c6852e514ebe514d3eaae27526cd744179421a39ab0cc48b40c0  ppsspp-1.9-lang.tar.gz
+e7ce75109dc74cf353e89805059c9b08b07b6f0c14504ea437712904f8980c9526b8b2844573b610d7775b9eafc6f7184b6c4496ba088fc689e580b5c62d5016  ppsspp-1.9-ffmpeg.tar.gz
 fb8c6c4a48003dac866b094f4d9d750bf7d1def14c9d3bf7a70f584ba187dacd5e57b29313e302740f5a0ec4bf27b6fea3d5cf27ae12bf6fac06f5a8ab23195b  ppsspp.desktop
 c22214c15b6e9305f688c25c5997248a6a04c2dc229ea8c2126f0d288be7386134d15fc210e07f70f7eee13b0ab7ff05befd5657de0fc897d947f23c94711cd0  ppsspp
-053c478b5a9d3779540bc98b08ff0ad4733ce595ec126fedca40e2050347f89497d5ac6a753fcfac7f7c9f4071fb165bb3ffbdf7cf51595f2a3e0c614886e704  ppsspp-version.patch
+3a4360b433149e5a9e6eed7d6330f2ecf4911bac76f23570596d413147e2aed44cf168290fac5c807d260fa6540672ac5d53ce95120bd5d348e95243fa53ffd3  ppsspp-version.patch
 6bf0dbe793cadbaa59199d0c0c169609db619ac4bb4bf33f226e5503765a9fb090c919a757b990396d3a744dfa217bc34c3a47e5e601a94da47b351035639113  ppsspp-headless"
